--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,6 @@ pytest = "^5.2"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.poetry.scripts]
+typer = "typer_tutorial.main:app"
